# malawi-news-scraper

./: .gitignore  pyproject.toml
src/scrapers/: __init__.py  base_feed_scraper.py  config.toml  malawi_voice.py
